client commit message

--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>client</title>
+    <title>GradeLink | Smart Student Result Management</title>
+
+    <!-- Favicon -->
+     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest"> 
+
+    <!-- App Description for SEO -->
+    <meta
+      name="description"
+      content="GradeLink is a smart and simple student result management system for schools, parents, and administrators."
+    />
+
+    <!-- Primary App Colors (optional for theme) -->
+    <meta name="theme-color" content="#0077B6" />
+
+    <!-- Fonts (optional) -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
+
+  <body class="font-inter bg-gray-50 text-gray-800">
     <div id="root"></div>
+
+    <!-- Vite script automatically handles your React app -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
